@@ -383,7 +383,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
 
           final byte[] payloads;
           if (hasPayloads) {
-            ros.flush();
             payloads = new byte[(int) ros.getFilePointer()];
             ros.writeTo(payloads, 0);
           } else {
