@@ -154,8 +154,8 @@ public class RAMOutputStream extends IndexOutput {
     }
   }
 
-  @Override
-  public void flush() throws IOException {
+  /** Forces any buffered output to be written. */
+  protected void flush() throws IOException {
     setFileLength();
   }
 
